--- a/cookCurryUI/src/app/components/header/header.component.html
+++ b/cookCurryUI/src/app/components/header/header.component.html
@@ -3,8 +3,8 @@
     <div class="container-fluid " >
       <a class="navbar-brand " href="#"><b><i>cookCurry</i></b></a>
       <button class="togButton navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-        >
+        
+        <mat-icon>view_headline</mat-icon>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0 p-2">
