--- a/cookCurryUI/src/app/components/search-by-ingredients/search-by-ingredients.component.html
+++ b/cookCurryUI/src/app/components/search-by-ingredients/search-by-ingredients.component.html
@@ -12,7 +12,7 @@ background-size: 100%;">
             <button class="btn btn-warning " type="button" data-bs-toggle="collapse"
                 data-bs-target="#filtercollapseExample" aria-expanded="false" aria-controls="filtercollapseExample"
                 (click)="bringFilterData()">
-                Add filters <b>v</b>
+                Add filters <mat-icon>filter_list</mat-icon>
             </button>
         </p>
         <div class="collapse" id="filtercollapseExample">
