--- a/cookCurryUI/src/app/components/dashboard/dashboard.component.html
+++ b/cookCurryUI/src/app/components/dashboard/dashboard.component.html
@@ -13,29 +13,27 @@
     <div class="secContainer ">
         <div id="home" class="row">
             <div class="title col-sm-12 col-md-5 col-lg-6 pb-4">
-                <div class="m-5" >
-                    <h1 style="font-size: 3rem" >
+                <div class="m-5">
+                    <h1 style="font-size: 3rem">
                         Welcome to <b><i>cookCurry!</i></b>
                     </h1>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores ea delectus deleniti,
                         consectetur nostrum nulla fugit? Nam qui adipisci explicabo animi reiciendis. Ipsum culpa, atque
-                        aspernatur similique obcaecati soluta praesentium? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum distinctio molestias harum rem sequi, maiores laboriosam excepturi saepe ipsum expedita accusamus laudantium, recusandae ex fugit consequatur officia perspiciatis minima necessitatibus!</p>
-                        <button class="search-btn m-4 justify-content-center" [routerLink]="['/searchByName']">search by recipe name</button>
-                        <button class="search-btn m-4 justify-content-center" [routerLink]="['/searchByIngredients']">search by ingredients</button>
+                        aspernatur similique obcaecati soluta praesentium? Lorem ipsum dolor sit amet, consectetur
+                        adipisicing elit. Dolorum distinctio molestias harum rem sequi, maiores laboriosam excepturi
+                        saepe ipsum expedita accusamus laudantium, recusandae ex fugit consequatur officia perspiciatis
+                        minima necessitatibus!</p>
+                    <button class="search-btn m-4 justify-content-center" [routerLink]="['/searchByName']">search by
+                        recipe name</button>
+                    <button class="search-btn m-4 justify-content-center" [routerLink]="['/searchByIngredients']">search
+                        by ingredients</button>
                 </div>
             </div>
             <div class="title-graphic col-sm-12 col-md-5 col-lg-6 pb-4">
-                <img class="img-fluid imageFadeIn" src="..\..\assets\images\fresh-healthy-food-background-png.png" alt="no photo">
+                <img class="img-fluid imageFadeIn" src="..\..\assets\images\fresh-healthy-food-background-png.png"
+                    alt="no photo">
             </div>
-
-            
-
         </div>
     </div>
-
-
-
-
-<router-outlet></router-outlet>
-
+    <router-outlet></router-outlet>
 </div>
