--- a/cookCurryUI/src/app/components/search-by-name/search-by-name.component.html
+++ b/cookCurryUI/src/app/components/search-by-name/search-by-name.component.html
@@ -19,74 +19,44 @@
                 </mat-form-field>
             </form>
 
-        
-        <!-- d-------------------- -->
-        <p class="d-flex justify-content-center">
-            <button class="btn btn-warning " type="button" data-bs-toggle="collapse"
-                data-bs-target="#filtercollapseExample" aria-expanded="false" aria-controls="filtercollapseExample"
-                (click)="bringFilterData()">
-                Add filters <b>v</b>
-            </button>
-        </p>
-        <div class="collapse" id="filtercollapseExample">
-            <div class="card card-body">
-                <div class="row">
 
-                    <ng-select
-                    class="col-sm-12 col-md-4 col-lg-4"
-                    [items]="cuisineArr" 
-                    bindLabel="cuisinename" 
-                    placeholder="Select Cuisine" 
-                    appendTo="body"
-                    [multiple]="true" 
-                    [(ngModel)]="selectedCuisine">
-                </ng-select>
-                <ng-select 
-                    class="col-sm-12 col-md-4 col-lg-4"
-                    [items]="courseArr" 
-                    bindLabel="coursename" 
-                    placeholder="Select Coursee" 
-                    appendTo="body"
-                    [multiple]="true" 
-                    [(ngModel)]="selectedCourse">
-                </ng-select>
-                <ng-select 
-                    class="col-sm-12 col-md-4 col-lg-4"
-                    [items]="dietArr" 
-                    bindLabel="dietname" 
-                    placeholder="Select Diet" 
-                    appendTo="body"
-                    [multiple]="true" 
-                    [(ngModel)]="selectedDiet">
-                </ng-select>
+            <!-- d-------------------- -->
+            <p class="d-flex justify-content-center">
+                <button class="btn btn-warning " type="button" data-bs-toggle="collapse"
+                    data-bs-target="#filtercollapseExample" aria-expanded="false" aria-controls="filtercollapseExample"
+                    (click)="bringFilterData()">
+                    Add filters <mat-icon>filter_list</mat-icon>
+                </button>
+            </p>
+            <div class="collapse" id="filtercollapseExample">
+                <div class="card card-body">
+                    <div class="row">
 
+                        <ng-select class="col-sm-12 col-md-4 col-lg-4" [items]="cuisineArr" bindLabel="cuisinename"
+                            placeholder="Select Cuisine" appendTo="body" [multiple]="true"
+                            [(ngModel)]="selectedCuisine">
+                        </ng-select>
+                        <ng-select class="col-sm-12 col-md-4 col-lg-4" [items]="courseArr" bindLabel="coursename"
+                            placeholder="Select Coursee" appendTo="body" [multiple]="true" [(ngModel)]="selectedCourse">
+                        </ng-select>
+                        <ng-select class="col-sm-12 col-md-4 col-lg-4" [items]="dietArr" bindLabel="dietname"
+                            placeholder="Select Diet" appendTo="body" [multiple]="true" [(ngModel)]="selectedDiet">
+                        </ng-select>
+
+                    </div>
                 </div>
             </div>
+
+
+
+
+
+
+            <div class="d-flex justify-content-center">
+                <button class="search-btn d-flex justify-content-center mt-4" (click)="getSelectedValue()">Get
+                    Recipes</button>
+            </div>
         </div>
-
-
-
-
-
-
-        <div class="d-flex justify-content-center">
-            <button class="search-btn d-flex justify-content-center mt-4" (click)="getSelectedValue()">Get
-                Recipes</button>
-        </div>
-    </div>
-        <!------spinner-------->
-        <!-- <div *ngIf="loading" class="d-flex justify-content-center m-4">
-        <div class="spinner-border" role="status">
-            <span class="sr-only" id="loading"></span>
-        </div>
-        </div>
-        </div> -->
-
-        <!-- <mat-progress-spinner *ngIf="loading$ | async" [mode] ="'indeterminate'" diameter="50" color="warn"></mat-progress-spinner> -->
-        <!----spinner---->
-
-
-
         <div class="no_data_received" *ngIf="no_data_received">
             We are sorry..No result found for <b> {{recipeName}}</b>. <br>
             Please check your spelling, try a more generic term, or less terms/filters.
@@ -132,9 +102,6 @@
                                     {{recipe.ingredients}}
                                 </div>
                             </div>
-
-
-
                         </li>
                         <li class="list-group-item">
                             <h2 class="accordion-header" [id]="'heading'+i+'a'">
@@ -152,9 +119,6 @@
                                     {{recipe.instructions}}
                                 </div>
                             </div>
-
-
-
                         </li>
 
                     </ul>
@@ -165,7 +129,5 @@
                 </div>
             </div>
         </div>
-
-
     </div>
 </div>
