--- a/cookCurryUI/src/app/components/search-by-ingredients/search-by-ingredients.component.scss
+++ b/cookCurryUI/src/app/components/search-by-ingredients/search-by-ingredients.component.scss
@@ -7,7 +7,7 @@
     padding: 20px;
     }
 .minSize{
-    
     width: 80vw !important;
-    max-width: 400px !important;
+    max-width: 500px !important;
+    min-width: 60% !important; 
 }
