--- a/cookCurryUI/src/app/components/search-by-name/search-by-name.component.scss
+++ b/cookCurryUI/src/app/components/search-by-name/search-by-name.component.scss
@@ -65,6 +65,14 @@ mat-progress-spinner{
   font-size: 20px;
   padding: 10px;
 }
+.txtOnImg{
+  position: relative;
+  background-color:rgba(245, 243, 243, 0.8);
+ top : -10%;
+ padding:3% ;
+ z-index: 100;
+ font-size: medium;
 
+}
   
 
