--- a/cookCurryUI/src/app/components/search-by-ingredients/search-by-ingredients.component.html
+++ b/cookCurryUI/src/app/components/search-by-ingredients/search-by-ingredients.component.html
@@ -1,7 +1,7 @@
-<div class="card" style="min-height: 100vh; background-image: url('../../../assets/images/bgImage4.webp');background-repeat: repeat-y;
+<div class="card align-items-center" style="min-height: 100vh; background-image: url('../../../assets/images/bgImage4.webp');background-repeat: repeat-y;
 background-size: 100%;">
-    <div class="d-flex flex-column mt-5 align-items-center" style="background-color: rgba(245, 245, 245, 0.8);
-    padding:20px 0 20px 0 ; max-width: 500px;">
+    <div class="d-flex flex-column m-5 p-5 align-items-center" style="background-color: rgba(245, 245, 245, 0.8);
+    padding:20px 0 20px 0 ;min-width: 60%; max-width: 500px;">
         <ng-select class="col-sm-12 col-md-4 col-lg-4 minSize " [items]="ingredientsArr" bindLabel="ingredient_name"
             placeholder="Select ingredients" appendTo="body" [multiple]="true" [(ngModel)]="selectedIngredients">
         </ng-select>
@@ -33,8 +33,7 @@ background-size: 100%;">
         </div>
 
         <div class="d-flex justify-content-center">
-            <button class="search-btn d-flex justify-content-center mt-4" (click)="getSelectedValue()">Get
-                Recipes</button>
+            <button class="search-btn d-flex justify-content-center mt-4 btn-primary btn" (click)="getSelectedValue()">Get Recipes</button>
         </div>
     </div>
     <div class="container-fluid mt-5">
