--- a/cookCurryUI/src/app/components/detailed-recipe/detailed-recipe.component.html
+++ b/cookCurryUI/src/app/components/detailed-recipe/detailed-recipe.component.html
@@ -22,7 +22,7 @@ background-size: 100%;">
 
                 </ul>
                 <div class="card-body">
-                    <a href="recipe.url" class="card-link">Link to detailed recipe</a>
+                    <a [href]="recipe.url" class="card-link">Link to detailed recipe</a>
 
                 </div>
             </div>
